peerbanhelper: update parameters in shell wrapper